add here_doc in repl, split functions in executor

--- a/Libft/Makefile
+++ b/Libft/Makefile
@@ -44,6 +44,7 @@ SRCS = ft_atoi.c \
        ft_strmapi.c \
 	   ft_strcmp.c \
        ft_strncmp.c \
+	   ft_strstr.c \
        ft_strnstr.c \
        ft_strrchr.c \
        ft_strtrim.c \
