added functions to libft and some wildcard expansion logic

--- a/Libft/Makefile
+++ b/Libft/Makefile
@@ -36,6 +36,7 @@ SRCS = ft_atoi.c \
        ft_split.c \
        ft_strchr.c \
        ft_strdup.c \
+       ft_strndup.c \
        ft_striteri.c \
        ft_strjoin.c \
        ft_strlcat.c \
@@ -49,6 +50,9 @@ SRCS = ft_atoi.c \
        ft_strrchr.c \
        ft_strtrim.c \
        ft_substr.c \
+       ft_strtok.c \
+       ft_strspn.c \
+       ft_strcspn.c \
        ft_tolower.c \
        ft_toupper.c \
        ft_lstadd_back.c \
