added free_ast and fixed 0 expansion

--- a/Libft/Makefile
+++ b/Libft/Makefile
@@ -24,6 +24,7 @@ SRCS = ft_atoi.c \
        ft_isprint.c \
        ft_isspace.c \
        ft_itoa.c \
+       ft_intlen.c \
        ft_memchr.c \
        ft_memcmp.c \
        ft_memcpy.c \
