--- a/.gitignore
+++ b/.gitignore
@@ -58,4 +58,26 @@ examples
 minishell
 tester
 minishell_tester
-minishell-tester
+a
+b
+c
+d
+existing_file.txt
+file
+file_$USER
+file_fwahl
+file1
+file01
+file2
+file02
+file3
+file03
+out
+out0
+out1
+out2
+out3
+outfile01
+outfile02
+output_file.txt
+outfile with spaces
