improved ast_logical and added more test cases

--- a/.gitignore
+++ b/.gitignore
@@ -81,3 +81,8 @@ outfile01
 outfile02
 output_file.txt
 outfile with spaces
+testfile_hello_dot_star_world.txt
+testfile_js_files.txt
+testfile_py_files.txt
+testfile_unique_log_fields.txt
+existent_file
